--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-635.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-2.94MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-10.46MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 波兰-818.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-179.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 波兰-818.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
