--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.94MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-10.46MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 波兰-818.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-805.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-354.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-725.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-179.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 波兰-818.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
