--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-805.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-354.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-2.60MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.89MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-354.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-805.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-725.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-179.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-805.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-725.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
